--- a/HelloWorldExample/src/sonar-project.properties
+++ b/HelloWorldExample/src/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectName=HelloWorldExample
 sonar.projectVersion=1.0
 
 # Comma-separated paths to directories with sources (required)
-sonar.sources=HelloWorldExample\src
+sonar.sources=HelloWorldExample/src
 
 # Language
 sonar.language=java
